tests/ui/attributes/unsafe-link-name-on-static.stderr
error: `link_name` is not an unsafe attribute
  --> $DIR/unsafe-link-name-on-static.rs:1:3
   |
LL | #[unsafe(link_name = "VALUE")]
   |   ^^^^^^ this is not an unsafe attribute
   |
   = note: extraneous unsafe is not allowed in attributes

warning: `#[link_name]` attribute cannot be used on statics
  --> $DIR/unsafe-link-name-on-static.rs:1:1
   |
LL | #[unsafe(link_name = "VALUE")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: `#[link_name]` can be applied to foreign functions and foreign statics
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: requested on the command line with `-W unused-attributes`
help: did you mean to use `#[export_name]`?
   |
LL - #[unsafe(link_name = "VALUE")]
LL + #[unsafe(export_name = "VALUE")]
   |

error: aborting due to 1 previous error; 1 warning emitted

